--- a/changelog/breaking-changes-migration/migration-guides.mdx
+++ b/changelog/breaking-changes-migration/migration-guides.mdx
@@ -1,153 +1,128 @@
 ---
 title: "Migration Guides"
-description: "Step-by-step instructions and checklists to help users transition their codebases between major versions—covering dependency changes, configuration updates, and advice for common scenarios experienced in real migrations."
+description: "Step-by-step instructions for upgrading from previous major versions, including recommended workflows, common pitfalls, and testing strategies to ensure a seamless transition."
 ---
 
 # Migration Guides
 
-GoogleTest's migration guides provide clear, actionable steps and checklists to assist users as they transition their codebases between major versions. These guides focus on practical concerns such as dependency updates, configuration changes, and common scenarios encountered during real-world migrations. By following these guides, you can ensure smooth upgrades and minimize disruptions.
+Ensure your transition to newer major versions of GoogleTest and GoogleMock is smooth and reliable by following comprehensive migration workflows presented here. This guide walks you through essential upgrade steps, highlights common pitfalls, and offers testing strategies critical for maintaining test stability and correctness.
 
 ---
 
-## 1. Preparation for Migration
+## 1. Preparing for Migration
 
-Before starting a version upgrade, it’s essential to understand the scope of changes, review release notes, and prepare your environment.
+Before starting your migration, it's imperative to thoroughly understand the scope and impact of changes introduced in new major versions. Follow these preparation steps:
 
-### Steps:
+- **Review Breaking Changes:** Familiarize yourself with all breaking changes detailed in the [Breaking Changes](./breaking-changes.md) documentation.
+- **Assess Dependency Updates:** Ensure your build environment and dependent libraries align with new version requirements.
+- **Backup Existing Tests:** Preserve current test suites and mocks to facilitate comparisons and rollback if necessary.
 
-1. **Review Release Notes and Breaking Changes**
-   - Familiarize yourself with the [breaking changes](breaking-changes) and [release notes](release-notes-history).
-   - Identify any deprecated features or APIs that affect your tests.
+<Tip>
+Always clone or branch your repository before migration to isolate changes and preserve your existing working state.
+</Tip>
 
-2. **Check Environment Compatibility**
-   - Ensure your build environment meets the updated system requirements, such as C++17 support.
-   - Confirm your platform and compiler versions are supported ([Supported Platforms](getting-started/prerequisites-installation/system-requirements)).
+## 2. Recommended Migration Workflow
 
-3. **Backup and Version Control**
-   - Commit all current work and create a branch specifically for migration to isolate changes.
+Streamline your migration process through these methodical steps:
 
-4. **Set Up Dependency Updates**
-   - Update GoogleTest and GoogleMock dependencies to the target version using your build system (e.g., CMake or Bazel).
-   - Confirm correct linkage and inclusion as per [Setup and Project Integration](getting-started/configuration-first-run/configuration-setup).
+### Step 1: Upgrade the GoogleTest and GoogleMock Libraries
 
----
+- Update your project dependencies to the target major version.
+- Confirm that headers and libraries are correctly referenced in your build system (e.g., CMake, Bazel).
 
-## 2. Adapting Test Code
+### Step 2: Build and Verify Compilation
 
-Upgrading to a major version may require changes in your test code to accommodate API modifications or behavioral alterations.
+- Attempt to compile your tests with the updated libraries.
+- Resolve all compilation errors related to API or macro changes.
+- Pay particular attention to changes in mocking macros and method signatures.
 
-### Key Areas to Address:
+### Step 3: Update Mock Definitions and Usage
 
-- **Refactoring Deprecated Macros and APIs**
-  - Replace deprecated macros with their current alternatives.
-  - Update test fixtures and test suite naming conventions as necessary.
+- Adjust mocking syntax to align with the new version conventions, such as changes to `MOCK_METHOD` macros.
+- Review handling of const qualifiers, noexcept specifications, and call type specifiers.
 
-- **Handling API Breaking Changes**
-  - Modify mock class definitions if mocks rely on altered constructs.
-  - Adjust usage of matchers, actions, and expectations according to new syntax or semantics ([Mocking Macros and Methods](api-reference/matchers-and-mocking/mocking-macros-and-methods), [Actions and Call Behaviors](api-reference/matchers-and-mocking/actions-and-call-behaviors)).
+### Step 4: Review Expectation Ordering and Sticky Behavior
 
-- **Address Assertion Behavior Modifications**
-  - Verify that assertions like `EXPECT_*` and `ASSERT_*` behave as expected, especially handling of fatal vs. non-fatal failure modes ([Assertions](api-reference/core-testing-api/assertions)).
+- Validate that expectation ordering (e.g., use of `InSequence`, sequences, and call cardinalities) matches the new semantics.
+- For sticky expectations, ensure explicit `.RetiresOnSaturation()` usage where needed to prevent unexpected upper bound violations.
 
-- **Update Parameterized and Typed Tests**
-  - Review your value-parameterized and typed test suites for compatibility ([Parameterized and Type-Parameterized Tests](api-reference/core-testing-api/parameterized-and-type-parameterized-tests)).
+### Step 5: Align with Updated Matcher and Action Interfaces
 
-- **Death Tests Considerations**
-  - If using death tests, review the death test invocation styles and threading considerations ([Death Tests](api-reference/specialized-testing-apis/death-tests), [Death Tests and Failure Handling](guides/advanced-testing-strategies/death-and-failure-tests)).
+- Check for changed matcher purity requirements.
+- Update custom matchers or actions to adhere to functional purity and interface constraints.
 
----
+### Step 6: Run Tests with Increased Verbosity
 
-## 3. Configuration and Build Adjustments
+- Execute tests with flags such as `--gmock_verbose=info` to surface detailed call traces and expectation matches.
+- Investigate unexpected or uninteresting call warnings thoroughly.
 
-Update your build system configuration to align with changes in GoogleTest’s integration patterns.
+### Step 7: Address Deprecations and Remove Legacy Macros
 
-### Actions:
+- Replace deprecated macros like `MOCK_METHODn` family with modern `MOCK_METHOD`.
+- Eliminate usage of older action macros in favor of lambdas or new action interfaces.
 
-- **Update CMake or Bazel Integration**
-  - Refresh your `CMakeLists.txt` or Bazel BUILD files to reflect new source locations, target names, or build flags as detailed in [Build System and Platform Integration](concepts/integration-patterns-advanced/build-system-and-platform-integration).
+### Step 8: Run Full Test Suite and Analyze Failures
 
-- **Enable C++17 and Compiler Flags**
-  - Ensure that the appropriate C++17 standard and compiler options are set to prevent compilation errors.
+- Confirm all tests pass as expected.
+- Review test failures for changes in strictness mode behaviors (`NiceMock`, `StrictMock`).
 
-- **Adjust Linkage Options for Shared Libraries (if applicable)**
-  - If you link against shared libraries, verify that your runtime flags align with the new library builds.
+### Step 9: Iterate and Refine
 
-- **Validate Integration Entrypoints**
-  - Confirm the use of proper initialization and execution entrypoints ([Integration Entry Points](overview/architecture-features/integration-entrypoints)).
+- Iterate on failing tests by refining expectations, matchers, and mocks.
+- Refactor legacy test patterns to leverage new mock features for robustness and clarity.
 
----
+<Tip>
+Use your version control system effectively to track modifications related specifically to migration, facilitating troubleshooting and incremental update tracking.
+</Tip>
 
-## 4. Testing the Migration
+## 3. Common Pitfalls and Solutions
 
-After modifying your tests and build configuration, thorough validation is critical.
+Navigating migration obstacles is easier with awareness of frequent issues:
 
-### Recommended Workflow:
+| Problem                                                                    | Solution                                                                                                  |
+|---------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------|
+| Compilation fails due to missing method qualifiers or specifiers           | Add or align `override`, `const`, `noexcept`, and `Calltype` specifiers according to updated API contracts |
+| Tests fail due to unexpected call counts or ordering violations             | Review `.Times()`, `.RetiresOnSaturation()`, and `InSequence` usage; adjust to new semantics                 |
+| Legacy `MOCK_METHODn` macros cause compilation or behavior incompatibilities| Replace with the generic `MOCK_METHOD` that supports all cases                                             |
+| Uninteresting call warnings flood test output                             | Explicitly allow calls via `EXPECT_CALL(...).Times(AnyNumber())`, or opt for `NiceMock` usage              |
+| Unexpected test failures from strict mock mode                            | Use `NiceMock` mode or adjust expectations to accommodate changes in uninteresting call handling           |
+| Failure to resolve overloaded method mocks                                | Use explicit overload disambiguation techniques like `Const()` wrapper or matcher type specifications     |
 
-1. **Incremental Test Runs**
-   - Run your test suites incrementally to catch failures early.
+<Warning>
+Ignoring warnings and errors during migration may lead to brittle tests or false positives. Address each systematically during your update cycle.
+</Warning>
 
-2. **Debug Failing Tests**
-   - Use `--gmock_verbose=info` and other diagnostic flags to trace mock calls and failures ([Debugging Death Tests and Mocking](faq/advanced-usage-and-performance/debugging-death-tests-and-mocking)).
+## 4. Testing Strategies to Ensure Seamless Transition
 
-3. **Update or Create Migration-Specific Tests**
-   - Write additional tests to ensure new behaviors or API changes are exercised.
+Achieve confidence in your migration with these targeted testing strategies:
 
-4. **Use Continuous Integration**
-   - Automate the migration test runs within your CI pipelines to continuously verify.
+- **Incremental Upgrade:** Migrate and test in stages rather than all at once, focusing on critical or frequently used mocks first.
+- **Use Verbose Logging:** Enable detailed diagnostics (`--gmock_verbose=info`) to understand expectation matches and mismatches.
+- **Add Checkpoints:** Utilize sequences or checkpoints in tests to verify call order explicitly through the migration period.
+- **Implement Migration Tests:** Create tests specifically verifying mocking behaviors and expectations relative to the old version.
+- **Leverage Heap and Thread Sanitizers:** Detect subtle bugs such as memory leaks or race conditions introduced by migration.
+- **Repository-Wide Static Analysis:** Run static analyzers to catch outdated usage or deprecated patterns.
 
-5. **Evaluate Performance**
-   - Compare test execution times before and after migration; optimize usage of parallelism and parameterized tests ([How to Run Tests Faster](faq/advanced-usage-and-performance/how-to-run-tests-faster)).
+## 5. Rollback Procedures
 
----
+In cases where migration introduces regressions that cannot be promptly fixed, employ these rollback steps:
 
-## 5. Common Migration Scenarios & Solutions
+- Restore your pre-migration branch or tag from version control.
+- Validate the reversion works by running the test suite in the previous environment.
+- Incrementally reapply required migration steps, isolating the cause of the failure.
+- Document encountered issues and coordinate fixes before retrying the migration.
 
-### Scenario: Mock Method Signature Changes
+## 6. Resources and Support
 
-- Update all `MOCK_METHOD` declarations to match new method signatures.
-- Use recommended mocking macros to handle new qualifiers or call types.
+For detailed help during migration, consult the following:
 
-### Scenario: Deprecated or Removed Features
-
-- Identify features marked as deprecated in release notes.
-- Refactor tests to replace deprecated features with supported alternatives.
-
-### Scenario: Test Failures Due to Assertion Behavior Changes
-
-- Distinguish between fatal and non-fatal assertion updates.
-- Adjust assertions accordingly, using `ASSERT_*` versus `EXPECT_*` as per best practices.
-
-### Scenario: Build Errors After Updating Dependencies
-
-- Review your build system for changed include paths, link libraries, or compile definitions.
-- Confirm all dependencies are at compatible versions.
-
----
-
-## 6. Post-Migration Best Practices
-
-- **Adopt New Features**
-  - Explore new assertion macros, matchers, or test patterns introduced in the latest versions to improve your test quality.
-
-- **Refactor to Increase Maintainability**
-  - Modularize test fixtures, exemplify usage of parameterized tests, and leverage mocks effectively.
-
-- **Document the Migration**
-  - Log key changes, upgrade steps, and lessons learned for your team.
-
-- **Continuously Monitor and Update**
-  - Follow ongoing release notes and prepare early for future migrations.
+- **Breaking Changes Documentation:** [Breaking Changes](./breaking-changes.md) for precise incompatibilities.
+- **Migration Checklist and Examples:** Refer to sample migration cases in community-contributed documentation.
+- **gMock Cookbook:** Advanced mocking recipes to adapt to evolving APIs.
+- **User Forums and Issue Trackers:** Seek community advice or report migration blockers.
 
 ---
 
-## Additional Resources
-
-- [Breaking Changes](breaking-changes) - Detailed description of breaking APIs and behaviors.
-- [GoogleTest Primer](primer.md) - Foundations for writing tests.
-- [GoogleMock Cookbook](gmock_cook_book.md) - Practical mocking recipes.
-- [Running and Configuring Tests](api-reference/core-testing-api/running-and-configuring-tests) - Guidance on test execution.
-- [Mocking with GoogleMock](guides/advanced-testing-strategies/mocking-with-googlemock) - Tutorial on mocking techniques.
+Maintaining test reliability and clarity during major version upgrades is an investment that pays off by giving your codebase a robust foundation on the latest tooling. Follow these migration guides diligently and reach out to the GoogleTest community for assistance as needed.
 
 ---
-
-Migration is a critical step towards leveraging the latest features and improvements in GoogleTest. By following these structured guides, you ensure your tests remain stable, your build processes smooth, and your testing practice robust.
